RESOLVED FIXED161343
Regression(r204923): It should be possible to set 'Location.href' cross origin
https://bugs.webkit.org/show_bug.cgi?id=161343
Summary Regression(r204923): It should be possible to set 'Location.href' cross origin
Chris Dumez
Reported 2016-08-29 14:30:57 PDT
It should be possible to set 'Location.href' cross origin: - https://html.spec.whatwg.org/#crossoriginproperties-(-o-) Firefox and Chrome allow this but we throw a SecurityError. We already allow setting crossOrigin.window.location which is equivalent.
Attachments
Patch (9.21 KB, patch)
2016-08-29 15:06 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2016-08-29 14:40:00 PDT
Chris Dumez
Comment 2 2016-08-29 15:06:41 PDT
Chris Dumez
Comment 3 2016-08-29 16:06:35 PDT
Comment on attachment 287335 [details] Patch Clearing flags on attachment: 287335 Committed r205154: <http://trac.webkit.org/changeset/205154>
Chris Dumez
Comment 4 2016-08-29 16:06:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.